<resources>
    <string name="app_name">StudentTeacher</string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="register">SIGNUP</string>

    <string name="password_mismatch">Password mismatch.</string>
    <string name="minimum_length">Minimum password length is 6.</string>
    <string name="enter_mobile">Please enter mobile number.</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_confirm_password">Please enter confirm password.</string>
    <string name="valid_email">Please enter valid email.</string>
    <string name="enter_email">Please enter email.</string>
    <string name="enter_last_name">Please enter last name.</string>
    <string name="enter_first_name">Please enter first name.</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="loading">Loading…</string>
    <string name="already_registered">You are already registered.</string>
    <string name="registration_successful">Registration successful.</string>


    <string name="login_successful">Login successful.</string>
    <string name="password_incorrect">Password incorrect.</string>
    <string name="something_went_wrong">Something went wrong!!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin_via">Sign in using social account.</string>
    <string name="not_registered">You are not registered.</string>


    <string name="messages">Messages</string>
    <string name="group">Groups</string>


</resources>
