<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="80dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/rl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo"
            android:contentDescription="@string/app_name" />


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_below="@+id/rl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp">
            <RelativeLayout
                android:id="@+id/rl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/img_1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/user96"
                    android:tint="@color/white"
                    android:layout_centerVertical="true"/>



                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:gravity="start"
                    android:layout_toRightOf="@+id/img_1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/email" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_email"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:id="@+id/img_2"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/change_password96"
                    android:tint="@color/white"
                    android:layout_centerVertical="true"/>



                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:gravity="start"
                    android:inputType="textPassword"
                    android:layout_toRightOf="@+id/img_2"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/password" />


            </RelativeLayout>

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="16sp"

                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/rl_password"
                android:background="@drawable/button_white_bg"
                android:layout_weight="1"
                />



            <LinearLayout
                android:id="@+id/submit_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_tv"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/signup_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_weight="1"

                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:gravity="start"
                   />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/submit_rl"
                    android:text="@string/forgot_password"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/white"
                    />

            </LinearLayout>






        </RelativeLayout>





    </RelativeLayout>


</RelativeLayout>